# ClickEngine

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  databricks.yml  pyproject.toml
notebooks/: load_click_data.py
resources/: catalog.yml
src/common/: config.py
src/notebooks/: load_click_data.py
src/readers/: stream_reader.py
src/utils/: logger.py  schemas.py
src/writers/: stream_writer.py
