[project]
name = "clickengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "andras", email = "andras.szuda@outlook.com" }
]
dependencies = [
    "pyspark >= 4.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "pyspark-stubs",
    "ruff",
]

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyspark.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
