[project]
name = "clickengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "andras", email = "andras.szuda@outlook.com" }
]
dependencies = [
    "pyspark >= 4.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "ruff",
    "databricks-sdk"
]

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyspark.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
builtins = ["spark", "dbutils", "display", "displayHTML", "sc", "sqlContext"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501", "F401", "F811", "E402", "F821"]

[tool.ruff.lint.per-file-ignores]
"src/notebooks/**/*.py" = ["E402", "F401", "F811", "F821", "I001"]