[project]
name = "clickengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "andras", email = "andras.szuda@outlook.com" }
]
dependencies = []

[dependency-groups]
dev = [
    "pyspark >= 4.0",
    "pre-commit",
    "mypy",
    "ruff",
    "databricks-sdk",
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyspark.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
builtins = ["spark", "dbutils", "display", "displayHTML", "sc", "sqlContext"]


[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["E402", "F401", "F811", "F821", "I001"]